Adding key to google maps

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 <script src="assets/js/core.min.js"></script>
 
 <!-- Google Map API -->
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjHoYoxBlSPcBRZX7He0jcIo9sSpPwEqs&callback=initMap&v=3.exp&sensor=false" type="text/javascript"></script>
 
 <!-- Google Analytics: Change UA-XXXXX-X to be your site's ID. Go to http://www.google.com/analytics/ for more information. -->
 <!--
