updating about me and skills sections

--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
                     <div class="resume-box">
                         <span class="icon animated" data-animation="fadeInDown"><i class="ti-comment-alt text-tertiary"></i></span>
                         <h4><strong>About</strong> Me</h4>
-                        <p class="lead">More than 8 years of experience as web developer using open technologies.</p>
-                        <p>I feel very comfortable working in all the development process (backend, frontend, modeling, infrastructure).</p>
+                        <p class="lead">Professional Software Developer with more than eight years of experience in the web development processes.</p>
+                        <p>Involved in the entire development steps, such as backend, frontend, modeling, infrastructure, etc. I like to internalize into the projects I work on and not only write code but also have a critical view of the product and functionalities.</p>
+                        <p>I’m very proactive and self-taught. I enjoy learning new things and then applying it.</p>
                         <p>I worked in software factories, e-commerce and in the payments industry.</p>
                         <p>Specialties: PHP, Laravel, React, JavaScript/ES6, Apache, Nginx, Node, Online Payments, Rest API, UX, Startups...</p>
                     </div>
@@ -105,7 +106,7 @@
                         <!-- Skill -->
                         <div class="skill">
                             <div class="progress progress-animated">
-                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                                     <span></span>
                                 </div>
                             </div>
@@ -123,7 +124,7 @@
                         <!-- Skill -->
                         <div class="skill">
                             <div class="progress progress-animated">
-                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                                     <span></span>
                                 </div>
                             </div>
@@ -141,11 +142,11 @@
                         <!-- Skill -->
                         <div class="skill">
                             <div class="progress progress-animated">
-                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
                                     <span></span>
                                 </div>
                             </div>
-                            <strong>Linux</strong>
+                            <strong>Node</strong>
                         </div>
                     </div>
 
@@ -161,7 +162,7 @@
                             <span class="speciality-icon"><i class="text-muted-2x ti-server"></i></span>
                             <div class="speciality-content">
                                 <h5 class="margin-b-0">Back-End Development</h5>
-                                <p class="speciaity-description">Laravel, Rest API, MySql, Linux</p>
+                                <p class="speciaity-description">Node, Laravel, Rest API, MySql, Linux</p>
                             </div>
                         </div>
                         <!-- Speciality -->
@@ -169,7 +170,7 @@
                             <span class="speciality-icon"><i class="text-muted-2x ti-desktop"></i></span>
                             <div class="speciality-content">
                                 <h5 class="margin-b-0">Front-End Development</h5>
-                                <p class="speciaity-description">React, Redux, ES6.</p>
+                                <p class="speciaity-description">React, Redux, Sagas, ES6</p>
                             </div>
                         </div>
                         <!-- Speciality -->
@@ -177,7 +178,7 @@
                             <span class="speciality-icon"><i class="text-muted-2x ti-mobile"></i></span>
                             <div class="speciality-content">
                                 <h5 class="margin-b-0">Responsive design</h5>
-                                <p class="speciaity-description">HTML, CSS, Flexbox</p>
+                                <p class="speciaity-description">HTML5, CSS3, Flexbox</p>
                             </div>
                         </div>
                     </div>
