Updating background image

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section id="start" class="section fullheight bg-secondary dark padding-v-60">
 
         <!-- BG Image -->
-        <div class="bg-image animated infinite zooming"><img src="assets/img/photos/it-bg012.jpg" alt="..."></div>
+        <div class="bg-image animated infinite zooming"><img src="assets/img/photos/back2.jpg" alt=""></div>
 
         <!-- Middle -->
         <div class="container container-wide v-bottom padding-v-80">
