--- a/index.html
+++ b/index.html
@@ -421,9 +421,8 @@
             <h1>Don’t hesitate to <strong>contact me</strong>!</h1>
             <!-- Contact List -->
             <ul class="list-unstyled list-unstyled-icons">
-                <li><i class="inline-icon icon-before-and-after text-primary fa fa-map-marker"></i>2678 Av. Brasil,<br/>Montevideo, Uruguay</li>
+                <li><i class="inline-icon icon-before-and-after text-primary fa fa-map-marker"></i>Montevideo, Uruguay</li>
                 <li><i class="inline-icon icon-before-and-after text-primary fa fa-comment"></i><a href="#">ivan.lolivier@gmail.com</a></li>
-                <li><i class="inline-icon icon-before-and-after text-primary fa fa-phone"></i>+598 99 046.538</li>
             </ul>
             <a href="#" class="btn btn-primary" data-target="messenger"><span>Use Contact Form</span><i class="ti-email"></i></a>
             <h5 class="margin-t-60">Check my social media!</h5>
