--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
                     <div class="resume-box">
                         <span class="icon animated" data-animation="fadeInDown"><i class="ti-comment-alt text-tertiary"></i></span>
                         <h4><strong>About</strong> Me</h4>
-                        <p class="lead">Professional Software Developer with more than eight years of experience in the web development processes.</p>
-                        <p>Involved in the entire development steps, such as backend, frontend, modeling, infrastructure, etc. I like to internalize into the projects I work on and not only write code but also have a critical view of the product and functionalities.</p>
-                        <p>I’m very proactive and self-taught. I enjoy learning new things and then applying it.</p>
-                        <p>I worked in software factories, e-commerce and in the payments industry.</p>
-                        <p>Specialties: PHP, Laravel, React, JavaScript/ES6, Apache, Nginx, Node, Online Payments, Rest API, UX, Startups...</p>
+                        <p class="lead">Professional Software Engineer with almost ten years of experience in the web development world.</p>
+                        <p>Involved in the entire development steps, such as backend, frontend, modeling, infrastructure, etc. I like to internalize into the projects I work on and not only write code but also have a critical view of the product, functionalities and the process.</p>
+                        <p>I’m very proactive and self-taught. I enjoy learning new things and then applying them.</p>
+                        <p>I worked in software factories, e-commerce companies and in the payments industry.</p>
+                        <p>Specialties: Node, React, JavaScript/ES6, Rest API, PHP, Laravel, Apache, Nginx, Online Payments...</p>
                     </div>
 
                     <!-- Resume Box / Skills -->
@@ -102,6 +102,15 @@
                                 </div>
                             </div>
                             <strong>JavaScript / ES6</strong>
+                        </div>
+                        <!-- Skill -->
+                        <div class="skill">
+                            <div class="progress progress-animated">
+                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                                    <span></span>
+                                </div>
+                            </div>
+                            <strong>Node</strong>
                         </div>
                         <!-- Skill -->
                         <div class="skill">
@@ -138,15 +147,6 @@
                                 </div>
                             </div>
                             <strong>MySql</strong>
-                        </div>
-                        <!-- Skill -->
-                        <div class="skill">
-                            <div class="progress progress-animated">
-                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                                    <span></span>
-                                </div>
-                            </div>
-                            <strong>Node</strong>
                         </div>
                     </div>
 
@@ -232,7 +232,7 @@
                             </div>
                             <!-- Single event -->
                             <div class="timeline-event te-primary">
-                                <span class="event-date">Mar 2006 - Dec 2017</span>
+                                <span class="event-date">Mar 2006 - Dec 2018</span>
                                 <span class="event-name">Computer Engineering</span>
                                 <span class="event-description">Universidad de la República, Uruguay</span>
                             </div>
@@ -264,15 +264,6 @@
                             </div>
                             <strong>English</strong>
                         </div>
-                        <!-- Skill -->
-                        <div class="skill">
-                            <div class="progress progress-animated">
-                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="20">
-                                    <span></span>
-                                </div>
-                            </div>
-                            <strong>Portuguese</strong>
-                        </div>
                     </div>
 
                     <!-- Resume Box / Hobbies -->
@@ -295,7 +286,7 @@
                             <li>
                                 <div class="icon-box text-center">
                                     <span class="icon icon-sm icon-circle icon-primary icon-filled"><i class="ti-map-alt"></i></span>
-                                    <span class="title">Travel</span>
+                                    <span class="title">Technology</span>
                                 </div>
                             </li>
                         </ul>
@@ -317,7 +308,7 @@
 
             <h6 class="margin-b-50">Testimonials</h6>
 
-            <h1 class="margin-b-0"><strong>8+</strong> years of experience!</h1>
+            <h1 class="margin-b-0"><strong>9+</strong> years of experience!</h1>
             <h5 class="text-muted margin-b-60">Co-worker and client opinions!</h5>
 
             <div class="row padding-lg" style="line-height: 140%">
@@ -364,8 +355,7 @@
                     <!-- Testimonial -->
                     <div class="testimonial testimonial-dark">
                         <div class="testimonial-content font-alt">
-                            Tuve la suerte de trabajar con Ivan, es muy profesional en su trabajo, comprometido, realiza desarrollos de alta calidad, le gusta trabajar en
-                            equipos, lo recomiendo ampliamente.
+                            I was lucky to work with Ivan, he is very professional in his work, committed, he carries out high quality developments, he likes to work in teams, I highly recommend him.
                         </div>
                         <div class="testimonial-author testimonial-with-photo">
                             <div class="testimonial-photo animated" data-animation="zoomIn">
@@ -382,13 +372,13 @@
                     <!-- Testimonial -->
                     <div class="testimonial testimonial-dark">
                         <div class="testimonial-content font-alt">
-                            <p>Iván tiene unas cuantas cualidades muy positivas que vi durante su trabajo en TuPropioSitio y me gustaría remarcar:</p>
-                            <p>- Es muy buen tipo <br>
-                                - Es muy inteligente, entiende todo al toque<br>
-                                - No se asusta ante los desafíos<br>
-                                - Está muy dispuesto a aprender, y a laburar extra si le entusiasma lo que hace<br>
-                                - No tiene problema en trabajar bajo incertidumbre<br>
-                                - Ha aprendido un montón en poco tiempo. Llegó a dominar el desarrollo web, sobre todo el lado del cliente (html/css/javascript/jquery)
+                            <p>Ivan has very positive qualities that I saw during his work at TuPropioSitio and I would like to highlight:</p>
+                            <p>- He is a very good guy <br>
+                                - He's very intelligent, he understands everything very quickly<br>
+                                - He is not scared of the challenges<br>
+                                - He is very willing to learn, and to work extra if he is excited about what he does<br>
+                                - He has no problem working under uncertainty<br>
+                                - He has learned a lot in a short time. He dominated web development, especially the client side (html / css / javascript / jquery)
                             </p>
                         </div>
                         <div class="testimonial-author testimonial-with-photo">
@@ -397,7 +387,7 @@
                             </div>
                             <div class="testimonial-author-txt">
                                 <span class="name">Sebastian Gonzalez Nappa</span>
-                                <span class="caption text-secondary">Entrepreneur, VP Sales at WyeWorks</span>
+                                <span class="caption text-secondary">Entrepreneur, CTO at tryolabs</span>
                             </div>
                         </div>
                     </div>
@@ -421,16 +411,13 @@
             <h1>Don’t hesitate to <strong>contact me</strong>!</h1>
             <!-- Contact List -->
             <ul class="list-unstyled list-unstyled-icons">
-                <li><i class="inline-icon icon-before-and-after text-primary fa fa-map-marker"></i>2678 Av. Brasil,<br/>Montevideo, Uruguay</li>
-                <li><i class="inline-icon icon-before-and-after text-primary fa fa-comment"></i><a href="#">ivan.lolivier@gmail.com</a></li>
-                <li><i class="inline-icon icon-before-and-after text-primary fa fa-phone"></i>+598 99 046.538</li>
+                <li><i class="inline-icon icon-before-and-after text-primary fa fa-map-marker"></i>Montevideo, Uruguay</li>
+                <li><i class="inline-icon icon-before-and-after text-primary fa fa-comment"></i><a href="mailto:ivan.lolivier@gmail.com">ivan.lolivier@gmail.com</a></li>
             </ul>
             <a href="#" class="btn btn-primary" data-target="messenger"><span>Use Contact Form</span><i class="ti-email"></i></a>
-            <h5 class="margin-t-60">Check my social media!</h5>
+            <h5 class="margin-t-60">Check my linkedIn and my github!</h5>
             <ul class="list-inline">
-                <li><a href="https://www.linkedin.com/in/ivan-lolivier" target="_blank" class="icon icon-circle icon-xs icon-linkedin"><i class="fa fa-linkedin"></i></a>
-                </li>
-                <li><a href="https://twitter.com/ivanlog19" target="_blank" class="icon icon-circle icon-xs icon-twitter"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/ivan-lolivier" target="_blank" class="icon icon-circle icon-xs icon-linkedin"><i class="fa fa-linkedin"></i></a></li>
                 <li><a href="https://github.com/ivanlolivier" target="_blank" class="icon icon-circle icon-xs icon-github"><i class="fa fa-github"></i></a></li>
             </ul>
         </div>
@@ -496,7 +483,6 @@
             <strong class="text-sm">Check my social media!</strong>
             <ul class="list-inline margin-t-10">
                 <li><a href="https://www.linkedin.com/in/ivan-lolivier/" class="icon icon-xs" target="_blank"><i class="fa fa-linkedin text-muted"></i></a></li>
-                <li><a href="https://twitter.com/ivanlog19" class="icon icon-xs" target="_blank"><i class="fa fa-twitter text-muted"></i></a></li>
                 <li><a href="https://github.com/ivanlolivier" class="icon icon-xs"><i class="fa fa-github text-muted"></i></a></li>
             </ul>
         </div>
