--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                             </div>
                             <div class="testimonial-author-txt">
                                 <span class="name">Sebastian Gonzalez Nappa</span>
-                                <span class="caption text-secondary">Entrepreneur, CTO at tryolabs</span>
+                                <span class="caption text-secondary">Entrepreneur, CEO at tryolabs</span>
                             </div>
                         </div>
                     </div>
