--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="container container-wide v-bottom padding-v-80">
             <img src="assets/img/photos/rsz_ivan.png" style="width: 96px" class="img-circle margin-b-30">
             <h1 class="text-lg margin-b-0">Hi! I’m <strong>Ivan L'olivier</strong></h1>
-            <h5 class="text-tertiary margin-b-40">experienced Ful-stack web developer</h5>
+            <h5 class="text-tertiary margin-b-40">experienced Full-stack web developer</h5>
             <span data-target="local-scroll"><a href="#resume" class="btn btn-lg btn-primary"><span>Go to my resume!</span><i class="ti-arrow-down"></i></a></span>
             <a href="/assets/Ivan_resume.pdf" class="btn btn-link" target="_blank"><span>Download my CV</span><i class="ti-file"></i></a>
         </div>
