--- a/index.html
+++ b/index.html
@@ -190,7 +190,13 @@
                         <div class="timeline">
                             <!-- Single event -->
                             <div class="timeline-event te-primary">
-                                <span class="event-date">May 2017 - Present</span>
+                                <span class="event-date">Oct 2019 - Present</span>
+                                <span class="event-name">Full Stack Web Developer @ <a href="https://iugo.com.uy" target="_blank">IUGO</a></span>
+                                <span class="event-description">We are Laravel experts and our core goal is to build exceptional products with the best code foundation & maintainability.</span>
+                            </div>
+                            <!-- Single event -->
+                            <div class="timeline-event te-primary">
+                                <span class="event-date">May 2017 - Oct 2019</span>
                                 <span class="event-name">Full Stack Web Developer @ CodigoDelSur</span>
                                 <span class="event-description">CodigoDelSur is the best Mobile App Development Company for Silicon Valley - New York - Los Angeles. We are based in Uruguay and work for startups.</span>
                             </div>
