--- a/index.html
+++ b/index.html
@@ -197,19 +197,19 @@
                             <!-- Single event -->
                             <div class="timeline-event te-primary">
                                 <span class="event-date">May 2017 - Oct 2019</span>
-                                <span class="event-name">Full Stack Web Developer @ CodigoDelSur</span>
+                                <span class="event-name">Full Stack Web Developer @ <a href="http://codigodelsur.com/" target="_blank">CodigoDelSur</a></span>
                                 <span class="event-description">CodigoDelSur is the best Mobile App Development Company for Silicon Valley - New York - Los Angeles. We are based in Uruguay and work for startups.</span>
                             </div>
                             <!-- Single event -->
                             <div class="timeline-event te-primary">
                                 <span class="event-date">May 2016 - May 2017</span>
-                                <span class="event-name">Full Stack Web Developer @ DecemberLabs</span>
+                                <span class="event-name">Full Stack Web Developer @ <a href="https://decemberlabs.com/" target="_blank">DecemberLabs</a></span>
                                 <span class="event-description">DecemberLabs building the best app possible delivering high-quality software.</span>
                             </div>
                             <!-- Single event -->
                             <div class="timeline-event te-primary">
                                 <span class="event-date">Jan 2016 - Apr 2016</span>
-                                <span class="event-name">SR. PS Web Developer @ NetSuite</span>
+                                <span class="event-name">SR. PS Web Developer @ <a href="https://www.netsuite.com/" target="_blank">NetSuite</a></span>
                                 <span class="event-description">Leading integrated cloud business software suite (business accounting, ERP, CRM and ecommerce).</span>
                             </div>
                             <!-- Single event -->
@@ -221,13 +221,13 @@
                             <!-- Single event -->
                             <div class="timeline-event te-primary">
                                 <span class="event-date">Mar 2012 - Jul 2015</span>
-                                <span class="event-name">Senior Web Developer @ AstroPay</span>
+                                <span class="event-name">Senior Web Developer @ <a href="https://www.astropay.com/" target="_blank">AstroPay</a></span>
                                 <span class="event-description">AP is a PSP that allows consumers to purchase online using local payment methods in local currency.</span>
                             </div>
                             <!-- Single event -->
                             <div class="timeline-event te-primary">
                                 <span class="event-date">Apr 2011 - Feb 2012</span>
-                                <span class="event-name">Web Developer @ Onetree</span>
+                                <span class="event-name">Web Developer @ <a href="https://onetree.com/" target="_blank">Onetree</a></span>
                                 <span class="event-description">Onetree is a company that delivers software solutions serving clients in more than 10 countries.</span>
                             </div>
                             <!-- Single event -->
