--- a/index.html
+++ b/index.html
@@ -207,7 +207,14 @@
                         <div class="timeline">
                             <!-- Single event -->
                             <div class="timeline-event te-primary">
-                                <span class="event-date">Oct 2019 - Present</span>
+                                <span class="event-date">Oct 2020 - Present</span>
+                                <span class="event-name">Senior Full Stack Engineer @ <a href="https://rematter.io/"
+                                                                                       target="_blank">ReMatter</a></span>
+                                <span class="event-description">Recycling Software Built for You. ReMatter provides a cloud-based enterprise solution to manage your customers, materials and assets.</span>
+                            </div>
+                            <!-- Single event -->
+                            <div class="timeline-event te-primary">
+                                <span class="event-date">Oct 2019 - Oct 2020</span>
                                 <span class="event-name">Full Stack Web Developer @ <a href="https://iugo.com.uy"
                                                                                        target="_blank">IUGO</a></span>
                                 <span class="event-description">We are Laravel experts and our core goal is to build exceptional products with the best code foundation & maintainability.</span>
